adding flags upon opening menu

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.wkwkman.binarandroidchapter4challenge">
+    package="com.wkwkman.binarandroidchapter5challenge" >
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -11,17 +13,26 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BinarAndroidChapter4Challenge"
-        tools:targetApi="31">
+        android:theme="@style/Theme.BinarAndroidChapter5Challenge"
+        tools:targetApi="31" >
         <activity
-            android:name=".ui.game.GameActivity"
-            android:exported="true">
+            android:name=".ui.menu.MenuActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.landing.LandingActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.splashscreen.SplashScreenActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ui.game.GameActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
