--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,15 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-parcelize'
+    id 'kotlin-android'
 }
 
 android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.wkwkman.binarandroidchapter4challenge"
+        applicationId "com.wkwkman.binarandroidchapter5challenge"
         minSdk 23
         targetSdk 32
         versionCode 1
@@ -47,5 +49,7 @@ dependencies {
 
     implementation 'com.intuit.ssp:ssp-android:1.1.0'
     implementation 'com.intuit.sdp:sdp-android:1.1.0'
+    implementation 'com.tbuonomo:dotsindicator:4.3'
+    implementation 'io.coil-kt:coil:2.2.2'
     
 }
